--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,41 @@
 body {
   margin: 0;
   line-height: 1.6;
+  color: navy;
+  font-size: 1.5rem;
 }
 
 .nav {
-  background-color: navajowhite;
+  background-color: #e2e0ff;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 2em;
 }
 
 .nav__logo {
   margin: 0;
+}
+
+.nav__list {
+  list-style: none;
+  display: flex;
+  height: 100%;
+  width: 50%;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.nav__link:hover::after{
+  content: '';
+  display: block;
+  height: 3px;
+  background-color: navy;
 }
